--- a/src/css/app.css
+++ b/src/css/app.css
@@ -4,8 +4,45 @@
   border: 0;
 }
 
+* {
+  font-family: Arial, sans-serif;
+}
+
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+.header {
+  height: 92px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #F0F0F0;
+}
+
+.header__logo {
+  margin: 0 40px;
+}
+
+.header__menu {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  color: #333333;
+}
+
+.header__menu-item {
+  list-style-type: none;
+  margin: 0 14px;
+}
+
+.header__menu-item_active_true {
+  opacity: 1;
+}
+
+.header__menu-item_active_false {
+  opacity: 0.6;
 }
