--- a/src/css/app.css
+++ b/src/css/app.css
@@ -14,7 +14,14 @@
   box-sizing: border-box;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .header {
+  flex: 0 0 auto;
   height: 92px;
   display: flex;
   align-items: center;
@@ -34,15 +41,48 @@
   color: #333333;
 }
 
-.header__menu-item {
+.header__menu__menu-item {
   list-style-type: none;
   margin: 0 14px;
+  cursor: pointer;
 }
 
-.header__menu-item_active_true {
+.header__menu__menu-item_active_true {
   opacity: 1;
 }
 
-.header__menu-item_active_false {
+.header__menu__menu-item_active_false {
   opacity: 0.6;
+}
+
+.main {
+  flex: 1 0 auto;
+}
+
+.footer {
+  flex: 0 0 auto;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 36px 0 40px;
+  font-size: 12px;
+}
+
+.footer__menu {
+  width: 404px;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.footer__menu__menu-item {
+  text-decoration: none;
+  color: #858585;
+}
+
+.footer__copyright {
+  display: inline-block;
+  float: right;
+  color: #858585;
 }
