--- a/src/css/app.css
+++ b/src/css/app.css
@@ -18,6 +18,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+
+  /* TODO Уточнить!!! */
+  min-width: 700px;
 }
 
 .header {
