--- a/src/css/header.css
+++ b/src/css/header.css
@@ -26,7 +26,8 @@
 }
 
 .header-menu__menu-item:hover {
-  box-shadow: 0 4px #F0F0F0;
+  opacity: 1;
+  color: #cc0000;
 }
 
 .header-menu__menu-item_active_true {
