--- a/src/css/house-item.css
+++ b/src/css/house-item.css
@@ -5,10 +5,16 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  border-radius: 15px;
+  border-radius: 20px;
   background-color: #F7F7F7;
   height: 100px;
   cursor: pointer;
+}
+
+.house-item:hover {
+  transition: .15s ease;
+  background: #FFFFFF;
+  box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50);
 }
 
 .house-item_size_big {
