--- a/src/css/main.css
+++ b/src/css/main.css
@@ -43,15 +43,17 @@
   display: flex;
 }
 
-.main-section__name {
+.main-section__header {
+ margin-bottom: 20px;
+}
+
+.section-header__name {
   font-weight: bold;
   font-size: 18px;
   color: #333333;
-  margin-bottom: 20px;
 }
 
-.main-section__pagination {
-  margin-bottom: 20px;
+.section-header__pagination {
 }
 
 .info-pane {
@@ -75,11 +77,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
 }
 
 .arrow {
   cursor: pointer;
+  filter: opacity(0.3);
   transition: .15s ease-out;
 }
 
@@ -89,11 +91,9 @@
 
 .arrow_direction_left {
   padding-left: 15px;
-  filter: opacity(0.3);
   transform: rotate(180deg);
 }
 
 .arrow_direction_right {
-  filter: opacity(0.3);
   transform: rotate(0deg);
 }
