--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   width: 630px;
   height: 331px;
+  background-image: url("../assets/bg@1x.png");
   background-image: -webkit-image-set(
       url("../assets/bg@1x.png") 1x,
       url("../assets/bg@2x.png") 2x
