--- a/src/css/main.css
+++ b/src/css/main.css
@@ -31,12 +31,12 @@
   margin-right: 26px;
 }
 
-#featured_scenarios {
+#featured-scenarios {
   width: 100%;
   margin-right: 40px;
 }
 
-#featured_devices {
+#featured-devices {
 
 }
 
