--- a/src/css/main.css
+++ b/src/css/main.css
@@ -99,3 +99,12 @@
 .arrow_direction_right {
   transform: rotate(0deg);
 }
+
+.scenarios-pane {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 200px);
+  /*grid-auto-columns: 200px;*/
+  grid-auto-rows: 100px;
+  /*grid-auto-flow: column;*/
+  grid-gap: 15px 15px;
+}
