add filter block to featured devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -55,7 +55,7 @@
   color: #333333;
 }
 
-.section-header__pagination {
+.pagination {
 }
 
 .info-pane {
@@ -81,13 +81,13 @@
   align-items: center;
 }
 
-.arrow {
+.pagination__arrow {
   cursor: pointer;
   filter: opacity(0.3);
   transition: .15s ease-out;
 }
 
-.arrow:hover {
+.pagination__arrow:hover {
   filter: opacity(1);
 }
 
@@ -103,8 +103,37 @@
 .scenarios-pane {
   display: grid;
   grid-template-columns: repeat(auto-fit, 200px);
-  /*grid-auto-columns: 200px;*/
   grid-auto-rows: 100px;
-  /*grid-auto-flow: column;*/
   grid-gap: 15px 15px;
 }
+
+.filter-menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+
+  font-weight: bold;
+  font-size: 13px;
+  color: #000000;
+  text-align: left;
+}
+
+.filter-menu__item {
+  margin: 0 5px;
+  padding: 8px 15px;
+  border-radius: 20px;
+
+  list-style-type: none;
+  cursor: pointer;
+  transition: 0.15s ease-out;
+}
+
+.filter-menu__item:hover {
+  background-color: #FFCD00;
+}
+
+.filter-menu__item_selected_true {
+  background-color: #FFD93E;
+}
+
