--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,8 +1,8 @@
 .header {
-  position: fixed;
-  width: 100%;
+  position: sticky;
   z-index: 100;
-  flex: 0 0 auto;
+  top: 0;
+  width: 100%;
   height: 92px;
   display: flex;
   align-items: center;
