add overflow hidden to scenarios grid and fix margins

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -24,6 +24,10 @@
   min-height: 100vh;
 
   /* TODO: Уточнить! */
-  min-width: 1151px;
-  max-width: 1366px;
+  /*min-width: 1151px;*/
+  /*max-width: 1366px;*/
+}
+
+@media screen and (max-width: 576px){
+
 }
