--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,12 +40,12 @@
 }
 
 #main {
-  margin-right: 26px;
+  margin-right: 23px;
 }
 
 #featured-scenarios {
   width: 100%;
-  margin-right: 40px;
+  margin-right: 37px;
 }
 
 #featured-devices {
@@ -63,6 +63,10 @@
   margin-bottom: 20px;
 }
 
+#featured-scenarios .main-section__header {
+  margin-bottom: 19px;
+}
+
 .main-section__header_margin_right {
   margin-right: 40px;
   margin-left: 40px;
@@ -77,9 +81,6 @@
 
 .section-header__name_margin_right {
   margin-right: 7px;
-}
-
-.pagination {
 }
 
 .info-pane {
@@ -112,7 +113,10 @@
 }
 
 .scenarios-pane {
+  padding: 1px 3px 5px 3px;
+  overflow: hidden;
   display: grid;
+  max-height: 336px;
   grid-template-columns: repeat(auto-fill, 200px);
   grid-auto-rows: 100px;
   grid-gap: 15px 15px;
@@ -123,7 +127,7 @@
   position: relative;
   top: -1px;
   overflow: hidden;
-  padding: 1px 0 5px 40px;
+  padding: 1px 0 5px 37px;
   grid-auto-flow: column;
   grid-auto-columns: 200px;
   grid-auto-rows: 120px;
