turn on scrolling on small screens

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -209,3 +209,12 @@
   }
 }
 
+@media screen and (max-width: 750px){
+  .scenarios-pane {
+    overflow: auto;
+  }
+
+  .devices-pane {
+    overflow: auto;
+  }
+}
