--- a/src/css/app.css
+++ b/src/css/app.css
@@ -22,12 +22,5 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-
-  /* TODO: Уточнить! */
-  /*min-width: 1151px;*/
-  /*max-width: 1366px;*/
-}
-
-@media screen and (max-width: 576px){
-
+  min-width: 375px;
 }
