style main content for small screens

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,7 +22,6 @@
   background-position: 40% 50%;
   background-clip: border-box;
   border-radius: 20px;
-  min-width: 285px;
 }
 
 .schedule-pane {
@@ -36,7 +35,7 @@
 }
 
 .main-section {
-  margin: 15px 0;
+  margin-bottom: 30px;
 }
 
 #main {
@@ -163,7 +162,7 @@
     padding: 1px 0 5px 40px;
     grid-auto-flow: column;
     grid-auto-columns: 200px;
-    grid-auto-rows: 120px;
+    grid-auto-rows: 100px;
     grid-gap: 15px 15px;
   }
 
@@ -183,6 +182,7 @@
     display: flex;
     flex-direction: column;
     align-self: stretch;
+    margin-right: 40px;
   }
 
   .main-widget {
@@ -195,7 +195,7 @@
     height: 331px; /* FIXME */
     width: auto;
     max-width: 630px;
-    min-width: 285px;
+    min-width: 335px;
 
     background-image: url("../assets/bg@1x.png");
     background-image: -webkit-image-set(
@@ -207,6 +207,17 @@
     background-clip: border-box;
     border-radius: 20px;
   }
+
+  .schedule-pane {
+    display: grid;
+    padding: 20px 20px 20px 20px;
+    grid-auto-columns: 200px;
+    grid-auto-rows: 120px;
+    grid-gap: 15px 15px;
+    position: relative;
+    overflow: auto;
+    grid-auto-flow: column;
+  }
 }
 
 @media screen and (max-width: 750px){
@@ -216,5 +227,53 @@
 
   .devices-pane {
     overflow: auto;
+  }
+}
+
+@media screen and (max-width: 576px){
+  #main {
+    margin: 0 20px 31px 20px;
+  }
+
+  #main > .main-section__header {
+    display: none;
+  }
+
+  .main-section {
+    margin-bottom: 21px;
+  }
+
+  .main-section__header {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .main-widget {
+    height: 282px;
+  }
+
+  .info-pane {
+    padding-top: 21px;
+    padding-left: 20px;
+  }
+
+  .info-pane__greetings {
+    font-size: 18px;
+  }
+
+  .info-pane__status {
+    font-size: 12px;
+  }
+
+  .scenarios-pane {
+    padding-left: 20px;
+  }
+
+  .devices-pane {
+    padding-left: 20px;
+  }
+
+  .main-content__first-line {
+    margin: 0;
   }
 }
