--- a/src/css/header.css
+++ b/src/css/header.css
@@ -8,11 +8,11 @@
   align-items: center;
   border-bottom: 1px solid #F0F0F0;
   background-color: #FFFFFF;
-  margin: 0 40px
+  padding: 0 40px
 }
 
 .header__logo {
-
+  margin-right: 54px;
 }
 
 .header__header-menu {
@@ -26,7 +26,7 @@
 
 .header-menu__menu-item {
   list-style-type: none;
-  margin: 0 14px;
+  margin-right: 28px;
   cursor: pointer;
   transition: color .15s ease-out;
 }
