--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: 0 36px 0 40px;
+  margin: 0 36px 0 40px;
   font-size: 12px;
 }
 
@@ -35,6 +35,11 @@
 }
 
 @media screen and (max-width: 576px) {
+  .footer {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
   .footer__footer-menu {
     display: grid;
     min-width: 375px;
