--- a/src/css/filter.css
+++ b/src/css/filter.css
@@ -11,7 +11,7 @@
 }
 
 .filter-menu-buttons__item {
-  margin: 0 5px;
+  margin-right: 10px;
   padding: 8px 15px;
   border-radius: 20px;
   background-color: #F7F7F7;
