--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -36,6 +36,8 @@
 
 @media screen and (max-width: 576px) {
   .footer {
+    height: 100px;
+    padding: 10px 0;
     margin-left: 20px;
     margin-right: 20px;
   }
@@ -44,8 +46,9 @@
     display: grid;
     min-width: 375px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 24px 24px;
     justify-content: center;
+    align-items: center;
     width: 100%;
     list-style-type: none;
   }
