--- a/src/css/range-slider.css
+++ b/src/css/range-slider.css
@@ -51,14 +51,13 @@ input[type=range]:focus {
 }
 
 .device-regulator__slider:focus::-webkit-slider-runnable-track {
-  background: transparent;
+  /*background: transparent;*/
 }
 
 .device-regulator__slider::-moz-range-track {
   width: 100%;
   height: 60px;
   cursor: pointer;
-  /*background: #7f7f7f none;*/
   border-radius: 30px;
 }
 
