--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -99,6 +99,12 @@
   margin-bottom: 25px;
 }
 
+.device-controller__controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .mode-menu {
   display: flex;
   flex-direction: row;
