--- a/src/css/range-slider.css
+++ b/src/css/range-slider.css
@@ -1,4 +1,4 @@
-.device-regulator__slider {
+.controls__slider {
 
 }
 
@@ -10,14 +10,14 @@ input[type=range]:focus {
   outline: none; /* Убирает голубую границу у элемента. Хотя, возможно, и стоит создавать некоторое оформления для состояния фокуса в целях обеспечения доступности. */
 }
 
-.device-regulator__slider {
+.controls__slider {
   -webkit-appearance: none;
   width: 100%;
   height: 60px;
 }
 
 /* Специальные правила для браузеров на движках WebKit/Blink */
-.device-regulator__slider::-webkit-slider-thumb {
+.controls__slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: 3px solid rgba(51,51,51,0.10);
   box-shadow: 0 0 0 4px #FFFFFF;
@@ -30,7 +30,7 @@ input[type=range]:focus {
 }
 
 /* Тоже самое для Firefox */
-.device-regulator__slider::-moz-range-thumb {
+.controls__slider::-moz-range-thumb {
   border: 3px solid rgba(51,51,51,0.10);
   background-color: transparent;
   outline: 4px solid #FFFFFF;
@@ -42,7 +42,7 @@ input[type=range]:focus {
 }
 
 /* Оформление области диапазона */
-.device-regulator__slider::-webkit-slider-runnable-track {
+.controls__slider::-webkit-slider-runnable-track {
   width: 100%;
   height: 60px;
   cursor: pointer;
@@ -50,29 +50,29 @@ input[type=range]:focus {
   border-radius: 30px;
 }
 
-.device-regulator__slider:focus::-webkit-slider-runnable-track {
+.controls__slider:focus::-webkit-slider-runnable-track {
   /*background: transparent;*/
 }
 
-.device-regulator__slider::-moz-range-track {
+.controls__slider::-moz-range-track {
   width: 100%;
   height: 60px;
   cursor: pointer;
   border-radius: 30px;
 }
 
-.device-regulator__slider_type_temperature::-webkit-slider-runnable-track {
+.controls__slider_type_temperature::-webkit-slider-runnable-track {
   background-image: linear-gradient(90deg, #068FFF 2%, #FFD800 51%, #F76B1C 100%);
 }
 
-.device-regulator__slider_type_temperature::-moz-range-track {
+.controls__slider_type_temperature::-moz-range-track {
   background-image: linear-gradient(90deg, #068FFF 2%, #FFD800 51%, #F76B1C 100%);
 }
 
-.device-regulator__slider_type_light::-webkit-slider-runnable-track {
+.controls__slider_type_light::-webkit-slider-runnable-track {
   background-image: linear-gradient(105deg, #FFE682 2%, #FF9E00 98%);
 }
 
-.device-regulator__slider_type_light::-moz-range-track {
+.controls__slider_type_light::-moz-range-track {
   background-image: linear-gradient(105deg, #FFE682 2%, #FF9E00 98%);
 }
