--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,7 +32,8 @@
   grid-auto-rows: 120px;
   grid-gap: 15px 15px;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .main-section {
@@ -130,7 +131,8 @@
   display: grid;
   position: relative;
   top: -1px;
-  overflow: hidden;
+  overflow-x: auto;
+  overflow-y: hidden;
   padding: 1px 0 5px 40px;
   grid-auto-flow: column;
   grid-auto-columns: 200px;
@@ -144,7 +146,7 @@
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    margin: 15px 0 0 0;
+    margin: 30px 0 0 0;
   }
 
   #main {
@@ -160,7 +162,8 @@
     display: grid;
     position: relative;
     top: -1px;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
     padding: 1px 0 5px 40px;
     grid-auto-flow: column;
     grid-auto-columns: 200px;
