--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -2,7 +2,7 @@
 
 
 .muted-background {
-  background: rgba(51,51,51,0.50);
+  background: rgba(51, 51, 51, 0.50);
 }
 
 .popup-container-wrapper {
@@ -12,13 +12,13 @@
   display: flex;
   align-items: center;
   width: 100%;
-  /* FIXME */
   height: 100%;
-  /*height: 500px;*/
+  transition: ease-in-out 0.5s;
 }
 
 .popup-container {
   margin: auto;
+  transition: ease-in-out 0.5s;
 }
 
 .popup-container__header {
@@ -29,7 +29,6 @@
 
 .device-status {
   display: flex;
-  /*align-items: center;*/
 }
 
 .device-status__current-value {
