--- a/src/css/range-slider.css
+++ b/src/css/range-slider.css
@@ -11,6 +11,7 @@ input[type=range]:focus {
 }
 
 .controls__slider {
+  position: relative;
   -webkit-appearance: none;
   width: 100%;
   height: 60px;
@@ -69,10 +70,44 @@ input[type=range]:focus {
   background-image: linear-gradient(90deg, #068FFF 2%, #FFD800 51%, #F76B1C 100%);
 }
 
+.controls__slider_type_temperature::before {
+  content: "-10";
+  font-weight: bold;
+  color: #FFFFFF;
+  font-size: 18px;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+}
+
+.controls__slider_type_temperature::after {
+  content: "+30";
+  font-weight: bold;
+  color: #FFFFFF;
+  font-size: 18px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
 .controls__slider_type_light::-webkit-slider-runnable-track {
   background-image: linear-gradient(105deg, #FFE682 2%, #FF9E00 98%);
 }
 
 .controls__slider_type_light::-moz-range-track {
   background-image: linear-gradient(105deg, #FFE682 2%, #FF9E00 98%);
+}
+
+.controls__slider_type_light::before {
+  content: url("../assets/icon_sun_min.svg");
+  position: absolute;
+  left: 15px;
+  top: 12px;
+}
+
+.controls__slider_type_light::after {
+  content: url("../assets/icon_sun_max.svg");
+  position: absolute;
+  right: 15px;
+  top: 12px;
 }
