--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,10 +14,10 @@
   justify-content: space-between;
   width: 630px;
   height: 331px;
-  background-image: url("/src/assets/bg@1x.png");
+  background-image: url("/assets/bg@1x.png");
   background-image: -webkit-image-set(
-      url("/src/assets/bg@1x.png") 1x,
-      url("/src/assets/bg@2x.png") 2x
+      url("/assets/bg@1x.png") 1x,
+      url("/assets/bg@2x.png") 2x
   );
   background-repeat: no-repeat;
   background-position: 40% 50%;
@@ -202,10 +202,10 @@
     max-width: 630px;
     min-width: 335px;
 
-    background-image: url("/src/assets/bg@1x.png");
+    background-image: url("/assets/bg@1x.png");
     background-image: -webkit-image-set(
-        url("/src/assets/bg@1x.png") 1x,
-        url("/src/assets/bg@2x.png") 2x
+        url("/assets/bg@1x.png") 1x,
+        url("/assets/bg@2x.png") 2x
     );
     background-repeat: no-repeat;
     background-position: 40% 50%;
